create github pages

--- a/LightRoom.html
+++ b/LightRoom.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">html website creator software download</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4s" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple bootstrap website development software download</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4s" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -256,7 +256,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="yLsZpecfs6DZhQGgR2juvwr9dzTfjJdyBZr3GKS0UZAzxk/JBuoXgfRONI6Aygn0P4xOPHmMPBwO9wUnz8To3H6KQXpidZrUGRoKDI66S1pfGl0zjQq4/Clgm/e6pFCE" data-form-email="true">
+                    <input type="hidden" value="Kzdfz9Kr+1E+WL8whb0HEHGerm1gN3s1Xhd1FSRUZ8bO5jO0jKbkDlmFPpBC7i8E6676ubFPs8mI1ROhK9gE7NShFD8gBJs81vBe9SY/RACx/kwPV9Fykb8W2Xti/ujF" data-form-email="true">
 
                     
 
