--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">top offline web design software download</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">easy bootstrap web page creator software</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="a/ebmb26nieIT6cLmENRUB3AAd5z9URG8SQDKIU2ZJd2hxi2icCdH2nSA0h3vL7dmlO8m3C6KqdJrpQEUiUOnPAOJ2zxJd9TAD9g1JmSCdkAhwX7EvyHlx/P5x8Y9pno" data-form-email="true">
+                    <input type="hidden" value="QwKFoMa4YCz4JlKQx2KuOvfLK+iRQ76unG6bXo4dQwuscIEuUUezecirRkpUlsKanaKYeGcNg0G8KcmOqzBITJN5X9hrXWtPRIg7vieMJ5ZI977ck7NS1z/BjviaN9Ok" data-form-email="true">
 
                     
 
