--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">easy bootstrap web page creator software</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">easy offline site development software download</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="QwKFoMa4YCz4JlKQx2KuOvfLK+iRQ76unG6bXo4dQwuscIEuUUezecirRkpUlsKanaKYeGcNg0G8KcmOqzBITJN5X9hrXWtPRIg7vieMJ5ZI977ck7NS1z/BjviaN9Ok" data-form-email="true">
+                    <input type="hidden" value="g7jIBPbpxmLaV9QoZyEKRxLV31tghoThexkojtzvXOQOqPWkeqVUF0XpozGZeFfbItgs9NCCrNC5nhfcEDM/yb2vPZtIz9RzUX6VqvQobX7Q7X9tPjs9W+EkwkwirpHy" data-form-email="true">
 
                     
 
