--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">website builder</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">wysiwyg site building software</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="rHkRxsxaRZF+MzmehbaEF045A4jniDv6JaCOmUaWqwhbo5wwM2X+28fvMyfJEBUUej/+r0bbxsIhEAd1P9CvSMdhY821vaN7rT8HatzWV3H+YbV27DGcyNEl6V7OVQGT" data-form-email="true">
+                    <input type="hidden" value="ENysD3FjN7ieMtTsfs7gUj9y/6TYinbEHVltmLIVVCQ+zjI/rxz0okjOkljiGt3vbs+jCpPtDd6vkAR2yef96UG0d2+HESGXqeRh7wsaJOzu/bGrqnlqq59HqelrL80A" data-form-email="true">
 
                     
 
