--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">easy wysiwyg web site maker software</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-45" style="background-image: url(assets/images/full-unsplash-photo-1487058792275-0ad4aaf24ca7-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple wysiwyg website generator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-45" style="background-image: url(assets/images/full-unsplash-photo-1487058792275-0ad4aaf24ca7-2000x1333.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(0, 0, 0);"></div>
 
@@ -218,7 +218,7 @@
                 <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
                     <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thanks for filling out form!</div></div>
                     <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="SUBSCRIBE FORM">
-                        <input type="hidden" value="i8f0vWUuTg9g+WmdiE3GrH/k8R5PUA9VTxQGWBZouPf71orvURxi4thNV2uK3AignhF/xZrbuf2pbratZXkyHrl1lpEMkocac4UqNPGsjh/MJYLvKvijHYG1Fzei5212" data-form-email="true">
+                        <input type="hidden" value="poh5jRvYwHTNxipN1Y3723GT6jeI66T0DdgDG4LPUfsYih01NVFqYoNJSC0unLDFa7Zii/8UQiRsp6CTcRLgkD7q0XRPkr2oUrNwnnCRCsCszgJG/xvL51KSrhNS6wB9" data-form-email="true">
                         <div class="mbr-subscribe mbr-subscribe-dark input-group">
                             <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Enter Your Email Address..." id="form2-65-email">
                             <span class="input-group-btn"><button type="submit" class="btn btn-primary">SUBSCRIBE</button></span>
@@ -274,7 +274,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="IEfUsI6to4ywUo8HmFyGdP0yxw16pe/AVwX7UZQHf2XBQNfIwU6nmkFGT//6mEgsdj/+fl4J/4BKDM4iC0mU77kibeZFIv6sgl5mh+Moa8P92WWY9ClOjn33vILb3av6" data-form-email="true">
+                    <input type="hidden" value="VjMasFq+NZCvmERjHVZxNEi6TLMRaRL+jSDN9moMoldJCasfoMRsbocipVjDgM73Idms05QDXjSV84MVr/Ri6Ok6bungM9Y8ttODV8zaxy6qn42MKZaOfcdiypyarHpH" data-form-email="true">
 
                     
 
