--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Generator</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Builder</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="1QD+vLp3ND4xXoJGO8+vF39U+ghTXyiIchqWog6aYOVvhwGPZlLVfUWYPOcY/TUp2ZNzMM9c/xDb6SsWnzNt2FsJ4YQxdxr4ugtTZMlZaX28In3INjphIwUR1LITJCKI" data-form-email="true">
+                    <input type="hidden" value="f5G2rcXqoRzxWONr7pA15xwDjjiyJGFt8mxS+gMF+sXPNot3TaLebtNveQYq1TYYyJ3TkKZM5xK1FWW+T6ANFBsEO/A4WFSN6CXjCRz1+Ozti0HMJYInlHLcnaX/Yqyk" data-form-email="true">
 
                     
 
