create github pages

--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Site Maker</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="kc+QZiEcpFCq28sJrr+d56ogP4BsTD9K6EXClcuyY2ixh/zvb59UwUp1nHx9KuEVv8xoBWFo/RQPc+VXY0TtqXoEwUY42MuTfXHJGZP9XmN7JDVWkuIAKe+HQbQvan3w" data-form-email="true">
+                    <input type="hidden" value="58ZT0QIhqGSOmVTof+V5qDlqYR76r1+LENzcG/Qm+zY3+8KMfwtEKFBkqvMz3O1295qGqRzyLCNWajnuczeLcu5ClNNC8vgo9fnlnt78eitbM8bqHBkMxb8GzGbeQVTU" data-form-email="true">
 
                     
 
