--- a/LightRoom.html
+++ b/LightRoom.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Builder</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4s" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Builder</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4s" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -256,7 +256,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="0aeF5M64/c1/ifK1yLCjKBwpslbBTjr9b8puMZJTzgUZ/yC3Eg2n1r3sPy1mJL055rqo9D+XUakmHOZ4SRzqgLas88shePZSZUaCEDNRXh5l/8a0BjJuXkKqDjsLH9fa" data-form-email="true">
+                    <input type="hidden" value="tCRRyw2NCZXbJAVu61mOpg7v73+HfZ07P5OwdwjoKthK0eDrKf7NIgM2guseUGGk8wOg8GOnT9w//KlKVVyhlHVF+q9ILEbQuSQcYsZViDwyRHLXM+MXxzi+rzODz1PQ" data-form-email="true">
 
                     
 
